--- a/walkthrough.html
+++ b/walkthrough.html
@@ -2598,6 +2598,302 @@ function closeSelect(fieldId) {
   <div class="doc-note mt-200">
     <p class="bodyRegular30"><strong>CSS load order:</strong> Include <code>input-components.css</code> after base system files and before <code>boilerplate.css</code>. See the file load order at the top of this page.</p>
   </div>
+
+  <h3 class="title50 mt-400 mb-100">Text Input Variants — Live</h3>
+  <div class="doc-preview">
+    <span class="doc-preview-label">Live — interact</span>
+    <div style="display: flex; flex-direction: column; gap: var(--spacing-300); max-width: 400px;">
+
+      <!-- Basic with label -->
+      <div class="input-field">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-basic">Label</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <input type="text" id="demo-basic" placeholder="Placeholder text">
+          </div>
+        </div>
+      </div>
+
+      <!-- With leading icon -->
+      <div class="input-field">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-icon">Email address</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-icon material-symbols-rounded">mail</span>
+            <input type="email" id="demo-icon" placeholder="you@example.com">
+          </div>
+        </div>
+      </div>
+
+      <!-- With icon and clear button -->
+      <div class="input-field" id="demo-field-clear">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-clear">Search</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-icon material-symbols-rounded">search</span>
+            <input type="text" id="demo-clear" placeholder="Type to search..."
+              oninput="syncHasValue('demo-field-clear', this)">
+            <button class="input-clear material-symbols-rounded" type="button"
+              onclick="clearInput('demo-field-clear', 'demo-clear')">close</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- With label link -->
+      <div class="input-field">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-link">Password</label>
+          <a class="input-link" href="#">Forgot password?</a>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-icon material-symbols-rounded">lock</span>
+            <input type="password" id="demo-link" placeholder="Enter password">
+          </div>
+        </div>
+      </div>
+
+      <!-- With helper message -->
+      <div class="input-field">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-helper">Username</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <input type="text" id="demo-helper" placeholder="@username">
+          </div>
+          <p class="input-message">Must be unique. Letters and numbers only.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <h3 class="title50 mt-400 mb-100">Select Dropdowns — Live</h3>
+  <div class="doc-preview">
+    <span class="doc-preview-label">Live — click to open</span>
+    <div style="display: flex; flex-direction: column; gap: var(--spacing-300); max-width: 400px;">
+
+      <!-- Basic select -->
+      <div class="input-field input-select" id="demo-select-1">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-sel-1">Sport</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-select-display is-placeholder" id="demo-sel-1-display">Choose a sport</span>
+            <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
+            <select id="demo-sel-1"
+              onchange="syncSelect('demo-select-1', 'demo-sel-1-display', this)"
+              onfocus="openSelect('demo-select-1')"
+              onblur="closeSelect('demo-select-1')">
+              <option value="" disabled selected>Choose a sport</option>
+              <option value="basketball">Basketball</option>
+              <option value="soccer">Soccer</option>
+              <option value="baseball">Baseball</option>
+              <option value="hockey">Hockey</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- Select with icon -->
+      <div class="input-field input-select" id="demo-select-2">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-sel-2">Position</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-icon material-symbols-rounded">sports_basketball</span>
+            <span class="input-select-display is-placeholder" id="demo-sel-2-display">Choose a position</span>
+            <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
+            <select id="demo-sel-2"
+              onchange="syncSelect('demo-select-2', 'demo-sel-2-display', this)"
+              onfocus="openSelect('demo-select-2')"
+              onblur="closeSelect('demo-select-2')">
+              <option value="" disabled selected>Choose a position</option>
+              <option value="pg">Point Guard</option>
+              <option value="sg">Shooting Guard</option>
+              <option value="sf">Small Forward</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- Select with helper message -->
+      <div class="input-field input-select" id="demo-select-3">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-sel-3">Country</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-select-display is-placeholder" id="demo-sel-3-display">Select your country</span>
+            <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
+            <select id="demo-sel-3"
+              onchange="syncSelect('demo-select-3', 'demo-sel-3-display', this)"
+              onfocus="openSelect('demo-select-3')"
+              onblur="closeSelect('demo-select-3')">
+              <option value="" disabled selected>Select your country</option>
+              <option value="us">United States</option>
+              <option value="ca">Canada</option>
+              <option value="mx">Mexico</option>
+              <option value="uk">United Kingdom</option>
+            </select>
+          </div>
+          <p class="input-message">Used for regional pricing and availability.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <h3 class="title50 mt-400 mb-100">Input States — Live</h3>
+  <div class="doc-preview">
+    <span class="doc-preview-label">Live — hover & focus</span>
+    <div style="display: flex; flex-direction: column; gap: var(--spacing-300); max-width: 400px;">
+
+      <!-- Default state -->
+      <div class="input-field">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-default">Default state</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <input type="text" id="demo-default" placeholder="Hover and focus me">
+          </div>
+        </div>
+      </div>
+
+      <!-- Error state -->
+      <div class="input-field is-error">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-error">Error state</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-icon material-symbols-rounded">mail</span>
+            <input type="email" id="demo-error" value="not-an-email">
+          </div>
+          <p class="input-message">Please enter a valid email address.</p>
+        </div>
+      </div>
+
+      <!-- Disabled state -->
+      <div class="input-field is-disabled">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-disabled">Disabled state</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <input type="text" id="demo-disabled" placeholder="Can't interact" disabled>
+          </div>
+        </div>
+      </div>
+
+      <!-- Select error state -->
+      <div class="input-field input-select is-error" id="demo-select-error">
+        <div class="input-label-row">
+          <label class="input-label" for="demo-sel-error">Select with error</label>
+        </div>
+        <div class="input-and-message">
+          <div class="input-control">
+            <span class="input-select-display is-placeholder" id="demo-sel-error-display">Choose an option</span>
+            <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
+            <select id="demo-sel-error"
+              onchange="syncSelect('demo-select-error', 'demo-sel-error-display', this)"
+              onfocus="openSelect('demo-select-error')"
+              onblur="closeSelect('demo-select-error')">
+              <option value="" disabled selected>Choose an option</option>
+              <option value="1">Option 1</option>
+              <option value="2">Option 2</option>
+            </select>
+          </div>
+          <p class="input-message">Please select an option to continue.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <h3 class="title50 mt-400 mb-100">Form Example — Live</h3>
+  <div class="doc-preview">
+    <span class="doc-preview-label">Live — complete form</span>
+    <div style="max-width: 400px;">
+      <div style="display: flex; flex-direction: column; gap: var(--spacing-300);">
+
+        <div class="input-field">
+          <div class="input-label-row">
+            <label class="input-label" for="demo-form-name">Full name</label>
+          </div>
+          <div class="input-and-message">
+            <div class="input-control">
+              <span class="input-icon material-symbols-rounded">person</span>
+              <input type="text" id="demo-form-name" placeholder="Jane Smith">
+            </div>
+          </div>
+        </div>
+
+        <div class="input-field">
+          <div class="input-label-row">
+            <label class="input-label" for="demo-form-email">Email</label>
+          </div>
+          <div class="input-and-message">
+            <div class="input-control">
+              <span class="input-icon material-symbols-rounded">mail</span>
+              <input type="email" id="demo-form-email" placeholder="you@example.com">
+            </div>
+          </div>
+        </div>
+
+        <div class="input-field input-select" id="demo-form-select">
+          <div class="input-label-row">
+            <label class="input-label" for="demo-form-sport">Favorite sport</label>
+          </div>
+          <div class="input-and-message">
+            <div class="input-control">
+              <span class="input-select-display is-placeholder" id="demo-form-sport-display">Choose a sport</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
+              <select id="demo-form-sport"
+                onchange="syncSelect('demo-form-select', 'demo-form-sport-display', this)"
+                onfocus="openSelect('demo-form-select')"
+                onblur="closeSelect('demo-form-select')">
+                <option value="" disabled selected>Choose a sport</option>
+                <option value="basketball">Basketball</option>
+                <option value="soccer">Soccer</option>
+                <option value="baseball">Baseball</option>
+                <option value="hockey">Hockey</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="input-field">
+          <div class="input-label-row">
+            <label class="input-label" for="demo-form-pw">Password</label>
+            <a class="input-link" href="#">Forgot?</a>
+          </div>
+          <div class="input-and-message">
+            <div class="input-control">
+              <span class="input-icon material-symbols-rounded">lock</span>
+              <input type="password" id="demo-form-pw" placeholder="••••••••">
+            </div>
+            <p class="input-message">Minimum 8 characters.</p>
+          </div>
+        </div>
+
+        <div style="margin-top: var(--spacing-100);">
+          <button class="btn btn-primary btn-300 btn-fill">Create account</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -2961,6 +3257,51 @@ function closeSelect(fieldId) {
   }, { rootMargin: '-20% 0px -70% 0px' });
 
   sections.forEach(s => observer.observe(s));
+
+  // =============================================
+  // INPUT FIELD HELPERS
+  // =============================================
+
+  // Text input with clear button
+  function syncHasValue(fieldId, input) {
+    const field = document.getElementById(fieldId);
+    if (input.value.trim()) {
+      field.classList.add('has-value');
+    } else {
+      field.classList.remove('has-value');
+    }
+  }
+
+  function clearInput(fieldId, inputId) {
+    const field = document.getElementById(fieldId);
+    const input = document.getElementById(inputId);
+    input.value = '';
+    field.classList.remove('has-value', 'is-error');
+    const msg = field.querySelector('.input-message');
+    if (msg) msg.style.display = 'none';
+    input.focus();
+  }
+
+  // Select dropdown
+  function syncSelect(fieldId, displayId, selectEl) {
+    const display = document.getElementById(displayId);
+    const chosen = selectEl.options[selectEl.selectedIndex];
+    if (chosen && chosen.value) {
+      display.textContent = chosen.text;
+      display.classList.remove('is-placeholder');
+    } else {
+      display.textContent = chosen.text;
+      display.classList.add('is-placeholder');
+    }
+  }
+
+  function openSelect(fieldId) {
+    document.getElementById(fieldId).classList.add('is-open');
+  }
+
+  function closeSelect(fieldId) {
+    document.getElementById(fieldId).classList.remove('is-open');
+  }
 </script>
 
 </body>
