update input components table in walkthrough; reorder input-components.css and boilerplate.css entries

--- a/walkthrough.html
+++ b/walkthrough.html
@@ -707,7 +707,8 @@
         <tr><td>9</td><td><code>interactive-tokens.css</code></td><td>Interactive surface styles (12 types) and scale transforms (3 levels)</td></tr>
         <tr><td>10</td><td><code>button-components.css</code></td><td>Button system: 8 types, 3 sizes, icon variants, circle buttons, groups</td></tr>
         <tr><td>11</td><td><code>list-row-components.css</code></td><td>List row system: 3-slot architecture, subcomponents (tags, switches, steppers)</td></tr>
-        <tr><td>12</td><td><code>boilerplate.css</code></td><td>CSS reset, layout helpers, all spacing utility classes, grid utilities, responsive show/hide</td></tr>
+        <tr><td>12</td><td><code>input-components.css</code></td><td>Input field system: text inputs, select dropdowns, states (error, disabled, has-value)</td></tr>
+        <tr><td>13</td><td><code>boilerplate.css</code></td><td>CSS reset, layout helpers, all spacing utility classes, grid utilities, responsive show/hide</td></tr>
       </tbody>
     </table>
   </div>
