refactor tag and chip styles; update padding and showcase examples for consistency

--- a/tag-chip-showcase.html
+++ b/tag-chip-showcase.html
@@ -181,18 +181,18 @@
       <!-- Bordered, Default Color -->
       <p class="showcase-subtitle">Bordered · Default Color · No Icon</p>
       <div class="showcase-row">
-        <button class="chip"><span class="chip-label">Default</span></button>
-        <button class="chip"><span class="chip-label">Hover me</span></button>
-        <button class="chip is-disabled"><span class="chip-label">Disabled</span></button>
+        <button class="chip surface-borderNeutral scale-300"><span class="chip-label">Default</span></button>
+        <button class="chip surface-borderNeutral scale-300"><span class="chip-label">Hover me</span></button>
+        <button class="chip surface-borderNeutral scale-300 is-disabled"><span class="chip-label">Disabled</span></button>
       </div>
 
       <p class="showcase-subtitle">Bordered · Default Color · Icon Trailing</p>
       <div class="showcase-row">
-        <button class="chip chip-icon-trailing">
+        <button class="chip surface-borderNeutral scale-300 chip-icon-trailing">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
-        <button class="chip chip-icon-trailing is-disabled">
+        <button class="chip surface-borderNeutral scale-300 chip-icon-trailing is-disabled">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
@@ -200,11 +200,11 @@
 
       <p class="showcase-subtitle">Bordered · Default Color · Icon Leading</p>
       <div class="showcase-row">
-        <button class="chip chip-icon-leading">
+        <button class="chip surface-borderNeutral scale-300 chip-icon-leading">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
-        <button class="chip chip-icon-leading is-disabled">
+        <button class="chip surface-borderNeutral scale-300 chip-icon-leading is-disabled">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
@@ -213,17 +213,17 @@
       <!-- Bordered, Team Color -->
       <p class="showcase-subtitle">Bordered · Team Color · No Icon</p>
       <div class="showcase-row">
-        <button class="chip chip-team-color"><span class="chip-label">Label</span></button>
-        <button class="chip chip-team-color is-disabled"><span class="chip-label">Disabled</span></button>
+        <button class="chip surface-borderNeutral scale-300 chip-team-color"><span class="chip-label">Label</span></button>
+        <button class="chip surface-borderNeutral scale-300 chip-team-color is-disabled"><span class="chip-label">Disabled</span></button>
       </div>
 
       <p class="showcase-subtitle">Bordered · Team Color · Icon Trailing</p>
       <div class="showcase-row">
-        <button class="chip chip-team-color chip-icon-trailing">
+        <button class="chip surface-borderNeutral scale-300 chip-team-color chip-icon-trailing">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
-        <button class="chip chip-team-color chip-icon-trailing is-disabled">
+        <button class="chip surface-borderNeutral scale-300 chip-team-color chip-icon-trailing is-disabled">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
@@ -231,11 +231,11 @@
 
       <p class="showcase-subtitle">Bordered · Team Color · Icon Leading</p>
       <div class="showcase-row">
-        <button class="chip chip-team-color chip-icon-leading">
+        <button class="chip surface-borderNeutral scale-300 chip-team-color chip-icon-leading">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
-        <button class="chip chip-team-color chip-icon-leading is-disabled">
+        <button class="chip surface-borderNeutral scale-300 chip-team-color chip-icon-leading is-disabled">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
@@ -244,17 +244,17 @@
       <!-- Ghost, Default Color -->
       <p class="showcase-subtitle">Ghost · Default Color · No Icon</p>
       <div class="showcase-row">
-        <button class="chip chip-ghost"><span class="chip-label">Label</span></button>
-        <button class="chip chip-ghost is-disabled"><span class="chip-label">Disabled</span></button>
+        <button class="chip surface-ghost scale-300"><span class="chip-label">Label</span></button>
+        <button class="chip surface-ghost scale-300 is-disabled"><span class="chip-label">Disabled</span></button>
       </div>
 
       <p class="showcase-subtitle">Ghost · Default Color · Icon Trailing</p>
       <div class="showcase-row">
-        <button class="chip chip-ghost chip-icon-trailing">
+        <button class="chip surface-ghost scale-300 chip-icon-trailing">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
-        <button class="chip chip-ghost chip-icon-trailing is-disabled">
+        <button class="chip surface-ghost scale-300 chip-icon-trailing is-disabled">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
@@ -262,11 +262,11 @@
 
       <p class="showcase-subtitle">Ghost · Default Color · Icon Leading</p>
       <div class="showcase-row">
-        <button class="chip chip-ghost chip-icon-leading">
+        <button class="chip surface-ghost scale-300 chip-icon-leading">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
-        <button class="chip chip-ghost chip-icon-leading is-disabled">
+        <button class="chip surface-ghost scale-300 chip-icon-leading is-disabled">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
@@ -275,17 +275,17 @@
       <!-- Ghost, Team Color -->
       <p class="showcase-subtitle">Ghost · Team Color · No Icon</p>
       <div class="showcase-row">
-        <button class="chip chip-ghost chip-team-color"><span class="chip-label">Label</span></button>
-        <button class="chip chip-ghost chip-team-color is-disabled"><span class="chip-label">Disabled</span></button>
+        <button class="chip surface-ghost scale-300 chip-team-color"><span class="chip-label">Label</span></button>
+        <button class="chip surface-ghost scale-300 chip-team-color is-disabled"><span class="chip-label">Disabled</span></button>
       </div>
 
       <p class="showcase-subtitle">Ghost · Team Color · Icon Trailing</p>
       <div class="showcase-row">
-        <button class="chip chip-ghost chip-team-color chip-icon-trailing">
+        <button class="chip surface-ghost scale-300 chip-team-color chip-icon-trailing">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
-        <button class="chip chip-ghost chip-team-color chip-icon-trailing is-disabled">
+        <button class="chip surface-ghost scale-300 chip-team-color chip-icon-trailing is-disabled">
           <span class="chip-label">Label</span>
           <span class="material-symbols-rounded">star</span>
         </button>
@@ -293,11 +293,11 @@
 
       <p class="showcase-subtitle">Ghost · Team Color · Icon Leading</p>
       <div class="showcase-row">
-        <button class="chip chip-ghost chip-team-color chip-icon-leading">
+        <button class="chip surface-ghost scale-300 chip-team-color chip-icon-leading">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
-        <button class="chip chip-ghost chip-team-color chip-icon-leading is-disabled">
+        <button class="chip surface-ghost scale-300 chip-team-color chip-icon-leading is-disabled">
           <span class="material-symbols-rounded">star</span>
           <span class="chip-label">Label</span>
         </button>
